# rapidstream-noc

./: .gitignore  .pre-commit-config.yaml  CLA.md  README.md  bin_to_hbm_mem.py  device.py  gen_vivado_bd.py  hbm_bank_to_addr.py  ir_credit_based.py  ir_helper.py  ir_verilog.py  noc_graph.py  noc_pass.py  noc_rtl_wrapper.py  pyproject.toml  run_noc_pass.py  tcl_helper.py  vh1582_nocgraph.py  vivado_bd_helper.py  vp1802_nocgraph.py
.github/: dependabot.yaml
.github/workflows/: pre-commit.yaml
